# photos-tool

./: .gitignore  LICENSE  README.md  app_main.py  pyproject.toml  requirements-build.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: app-bundle-plan.md  app-delivery-findings.md  app-install.md  audit-external-findings.md  audit-handoff.md  implementation-audit.md  manual-test.md  windows-setup.md
docs/history/: app-delivery-findings.md  implementation-audit.md  safety-fix-plan.md
packaging/: app_main.py  codesign-cert.cnf  create-codesign-cert.sh  photos-tool.spec
scripts/: build-app.sh  check.sh
src/photos_tool/: __init__.py  __main__.py  _frozen.py  cli.py  config.py  convert.py  gui_actions.py  menubar.py  osxphotos_runner.py  plan.py  reconcile.py  remove.py  report.py  smb.py  state.py  tooling.py
tests/: conftest.py  test_app_spec.py  test_cleanup_between_steps.py  test_cli.py  test_config.py  test_convert.py  test_gui_actions.py  test_osxphotos_runner.py  test_plan.py  test_real_tools.py  test_reconcile.py  test_remove.py  test_report.py  test_scale.py  test_send_fake_tools.py  test_smb.py  test_state.py  test_tooling.py
tests/fakebin/: tool.py
tests/fixtures/: report.csv  report_missing.json  report_ok.json  report_real_sanitized.json  sample.heic
