[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photos-tool"
version = "0.0.1"
description = "Send selected Apple Photos from a Mac to a Windows PC on the same LAN, with metadata intact."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dominic Reiss" }]
keywords = ["photos", "osxphotos", "macos", "windows", "smb", "exif"]
dependencies = [
  'osxphotos==0.76.1; sys_platform == "darwin"',
  'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pyright>=1.1.380", "pytest>=8.0"]
gui = ['rumps>=0.4.0; sys_platform == "darwin"']

[project.scripts]
photos-tool = "photos_tool.cli:main"
photos-tool-menubar = "photos_tool.menubar:main"

[tool.hatch.build.targets.wheel]
packages = ["src/photos_tool"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
# The rumps menu-bar shell needs a macOS-only, untyped GUI dependency; its logic
# lives in the type-checked, unit-tested gui_actions.py instead.
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "src/photos_tool/menubar.py"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "requires_sips: needs the macOS sips image tool",
  "requires_exiftool: needs the real exiftool binary",
  "requires_ffmpeg: needs the real ffmpeg/ffprobe binaries",
]
